Alteração realizada para funcionar no pc da empresa